2007-09-30  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (WebStatus): update docs

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): remove
	the trailing "M" indicator that tells us this is a modified file.
	This should help with mode="update" builds that modify files
	in-place. Thanks to "Oz" (chris at santacruzgames.com) for the
	patch.

	* buildbot/scripts/runner.py (upgradeMaster): improvements: write
	new copies of files (to .new) when those files already exist,
	check the master.cfg file for errors (and give DeprecationWarnings
	a chance to be displayed).
	* buildbot/test/test_runner.py: add more tests
	* docs/buildbot.texinfo (Upgrading an Existing Buildmaster): docs

2007-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/steps/source.py (Mercurial.computeSourceRevision): take
	the revision id from the last change in our list, since that's the
	best we can do without knowing the full ancestry graph. Closes #103.

	* buildbot/scripts/sample.cfg: use buildstep instances in
	f.addStep, to demonstrate the (correct) modern usage.
	* docs/examples/hello.cfg: bring this up to date. Closes #79.
	* docs/examples/twisted_master.cfg: add a big warning about how
	old this is
	* docs/examples/glib_master.cfg: delete this one entirely, it is
	ancient and not a very useful example anyways

	* buildbot/status/web/base.py (HtmlResource.render): keep track of
	HTTPChannels, so we can shut them down at reconfig time (when the
	WebStatus goes away). Closes #102.
	* buildbot/status/web/baseweb.py (WebStatus.__init__): same
	(WebStatus.registerChannel): same
	(WebStatus.stopService): do .loseConnection() here

	* buildbot/test/test_webparts.py (Webparts.testPages): reload the
	WebStatus, make sure all pages are still retrievable. I thought
	this would exercise a bug, but it turns out that it was firefox
	caching connections (and continuing to talk to the old WebStatus
	even though I'd loaded a new one).