@@ -1,5 +1,13 @@
 2007-09-30  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/web/base.py (OneLineMixin): refactor, move this
+	from builder.py, use it on the Builder page too
+	* buildbot/status/web/builder.py (StatusResourceBuilder): same
+	* buildbot/status/web/baseweb.py (OneLinePerBuild): display branch
+	names, add some CSS classes
+	* buildbot/status/web/classic.css (td.box): new class, for
+	OneBoxPerBuild
+
 	* docs/buildbot.texinfo (WebStatus): update docs
 
 	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): remove
